# helloworld-rest-cpp

./: .clang-format  .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.builder  LICENSE  Makefile  README.md
modules/: Deps.cmake  Server.cmake
scripts/: build.sh  clean.sh  compile.sh  coverage.sh  format.sh  run.sh  test.sh
src/: CMakeLists.txt  main.cc
src/api/v1/: CMakeLists.txt  controller.cc  controller.h  error.cc  error.h
src/api/v1/test/: CMakeLists.txt  controller.cc
src/log/: CMakeLists.txt  log.cc  log.h
src/service/: CMakeLists.txt  error.h  service.h  service_impl.cc  service_impl.h
src/service/mock/: service.h
src/service/test/: CMakeLists.txt  service_impl.cc
